--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -5,4 +5,7 @@ KERNEL_ARCH_LIBS=
 
 KERNEL_ARCH_OBJS=\
                  $(ARCHDIR)/boot.o \
+                 $(ARCHDIR)/idt_impl.o \
+                 $(ARCHDIR)/isrs.o \
+                 $(ARCHDIR)/isrs_impl.o \
                  $(ARCHDIR)/tty.o \
