--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,12 @@ path = "kernel/main.rs"
 bootloader = "0.9.11"
 volatile = "0.2.6"
 spin = "0.5.2"
+x86_64 = "0.12.1"
 
 [dependencies.lazy_static]
 version = "1.0"
 features = ["spin_no_std"]
+
+[package.metadata.bootimage]
+test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
+test-success-exit-code = 33
