tests: add basic_boot integration test
Extract required test functions into a kernel library that is linked to
each independent integration test executable

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Mayant Mukul <mayantmukul@outlook.in>"]
 edition = "2018"
 
+[lib]
+path = "kernel/lib.rs"
+
 [[bin]]
 name = "bottleos"
 path = "kernel/main.rs"
