--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -5,8 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Get clippy
-        run: rustup component add clippy
+      - name: Install toolchain
+        uses: actions-rs/toolchain@v1.0.6
+        with:
+          toolchain: nightly
+          override: true
+          components: clippy
       - name: Check
         uses: actions-rs/clippy-check@v1.0.7
         with:
