ci: fix typo in docs.yml

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,4 +15,4 @@ jobs:
           toolchain: nightly
           override: true
       - name: Build docs
-        run: cargo docs
+        run: cargo doc
