--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,5 +14,6 @@ jobs:
         with:
           toolchain: nightly
           override: true
+          components: rust-src, llvm-tools-preview
       - name: Build docs
         run: cargo doc
