--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -14,5 +14,5 @@ jobs:
       - name: Check
         uses: actions-rs/clippy-check@v1.0.7
         with:
-          token: ${{ secrets.GH_REPO_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           toolchain: nightly
