--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -1,5 +1,9 @@
 name: clippy
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ] 
+  pull_request:
+    branches: [ main ]
 jobs:
   clippy:
     runs-on: ubuntu-latest
@@ -14,5 +18,5 @@ jobs:
       - name: Check
         uses: actions-rs/clippy-check@v1.0.7
         with:
-          token: ${{ secrets.GH_REPO_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           toolchain: nightly
