--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,10 @@ path = "kernel/main.rs"
 name = "should_panic"
 harness = false
 
+[[test]]
+name = "stack_overflow"
+harness = false
+
 [dependencies]
 bootloader = "0.9.11"
 volatile = "0.2.6"
