--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ name = "stack_overflow"
 harness = false
 
 [dependencies]
-bootloader = "0.9.11"
+bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
 volatile = "0.2.6"
 spin = "0.5.2"
 x86_64 = "0.13.2"
