--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bottleos"
 description = "A bare-bones kernel created to teach myself OS internals"
-version = "0.1.0-rc1"
+version = "0.2.0"
 homepage = "https://github.com/mayant15/bottleos"
 documentation = "https://github.com/mayant15/bottleos"
 repository = "https://github.com/mayant15/bottleos"
