--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,6 @@
 [unstable]
-build-std = ["core", "compiler_builtins", "alloc"]
+#build-std = ["core", "compiler_builtins", "alloc"]
+build-std = ["core", "compiler_builtins"]
 build-std-features = ["compiler-builtins-mem"]
 
 [build]
@@ -7,3 +8,7 @@ target = "build/x86_64-cargo-target.json"
 
 [target.'cfg(target_os = "none")']
 runner = "bootimage runner"
+
+[env]
+CFLAGS = "-std=gnu11 -ffreestanding -fno-stack-protector -fno-pic -mabi=sysv -mno-80387 -mno-mmx -mno-3dnow -mno-sse -mno-sse2 -mno-red-zone -mcmodel=kernel -MMD"
+
