--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,14 +22,17 @@ name = "stack_overflow"
 harness = false
 
 [dependencies]
-bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
+# bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
 volatile = "0.2.6"
 spin = "0.5.2"
 x86_64 = "0.14.2"
 uart_16550 = "0.2.0"
 pic8259 = "0.10.1"
 pc-keyboard = "0.5.0"
-linked_list_allocator = "0.9.0"
+# linked_list_allocator = "0.9.0"
+
+[build-dependencies]
+cc = "1.0"
 
 [dependencies.lazy_static]
 version = "1.0"
