--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,14 +22,12 @@ name = "stack_overflow"
 harness = false
 
 [dependencies]
-# bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
 volatile = "0.2.6"
 spin = "0.5.2"
 x86_64 = "0.14.2"
 uart_16550 = "0.2.0"
 pic8259 = "0.10.1"
 pc-keyboard = "0.5.0"
-# linked_list_allocator = "0.9.0"
 
 [build-dependencies]
 cc = "1.0"
@@ -38,10 +36,10 @@ cc = "1.0"
 version = "1.0"
 features = ["spin_no_std"]
 
-[package.metadata.bootimage]
-test-args = [
-    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
-    "-display", "none"
-]
-test-success-exit-code = 33
-test-timeout = 120
+#[package.metadata.bootimage]
+#test-args = [
+#    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
+#    "-display", "none"
+#]
+#test-success-exit-code = 33
+#test-timeout = 120
